services/hdhomerun/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://hdhomerun.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: hdhomerun
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: hdhomerun
    gethomepage.dev/name: Hdhomerun
    gethomepage.dev/widget.type: hdhomerun
    gethomepage.dev/widget.url: http://hdhomerun-service
spec:
  ingressClassName: nginx
  rules:
    - host: hdhomerun.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
